<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/statusTextView"
        android:fillViewport="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfcStatusString"
            android:id="@+id/statusTextView"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programButtonName"
            android:id="@+id/programButton"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:enabled="true"
            android:onClick="onProgramButtonClicked"
            android:layout_alignParentBottom="true"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:background="@color/DarkBlue"
            android:singleLine="true"
            android:padding="5dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deviceView"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/programButton"
            android:layout_below="@+id/statusTextView">

            <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editToggleSwitch"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:onClick="onEditSwitchToggled"
                    android:textOff="Edit"
                    android:textOn="Lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/deviceIDlabel"
                    android:id="@+id/textView7" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/deviceIDText"
                    android:layout_gravity="center_horizontal"
                    android:gravity="right"
                    android:inputType="none" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/stimPeriodLabel"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:gravity="right"
                    android:id="@+id/stimulationPeriodText" />

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/stimAmplitudeLabel"
                    android:id="@+id/textView8" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/stimulationAmplitudeText"
                    android:gravity="right"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/pulseWidthLabel"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/stimulationWidthText"
                    android:gravity="right"
                    android:layout_gravity="center_horizontal" />

                <Spinner
                    style="@android:style/Widget.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/stimulationWidthSpinner"
                    android:entries="@array/stimulationWidths"
                    android:spinnerMode="dialog" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:text="@string/lastUpdateLabel"
                android:id="@+id/textView9" />

                <TextView
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastUpdateText"
                    android:inputType="none"
                    android:gravity="right"
                    android:textStyle="italic"
                    android:editable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/uptimeLabel"
                    android:id="@+id/textView5" />

                <TextView
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/uptimeText"
                    android:gravity="right"
                    android:textStyle="italic"
                    android:editable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/batteryVoltageLabel"
                    android:id="@+id/textView3" />

                <TextView
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/batteryVoltageText"
                    android:gravity="right"
                    android:textStyle="italic"
                    android:editable="false" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
